Omnibox UI Experiments: Steady State Elisions - Fix Cut to clipboard

This CL improves the after-Cut text processing to reliably handle the
Cut case when Steady State Elisions is on.

Previously, the logic relied on IsSelectAll, which doesn't work
correctly in the Cut case. Now it just compares the contents of the
paste buffer vs. the current page's display URL.

This also has the side benefit of simplifying the API.

It also updates a test to explicitly check a Steady State Elisions
case.

Bug: 838159, 797354
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Iae3ee431051e2f7bbbf63a0b87e82b7f363213aa
Reviewed-on: https://chromium-review.googlesource.com/1040912
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556113}
Former-commit-id: b84f1e3579e4f82974733d45fbe79c3ead2c19ce