components/omnibox/browser/omnibox_edit_model_unittest.cc
@@ -8,8 +8,10 @@
 
 #include <memory>
 
+#include "base/test/scoped_feature_list.h"
 #include "base/test/scoped_task_environment.h"
 #include "components/omnibox/browser/autocomplete_match.h"
+#include "components/omnibox/browser/omnibox_field_trial.h"
 #include "components/omnibox/browser/omnibox_view.h"
 #include "components/omnibox/browser/search_provider.h"
 #include "components/omnibox/browser/test_omnibox_client.h"
@@ -74,7 +76,6 @@ TEST_F(OmniboxEditModelTest, AdjustTextForCopy) {
   struct Data {
     const char* url_for_editing;
     const int sel_start;
-    const bool is_all_selected;
 
     const char* match_destination_url;
     const bool is_match_selected_in_popup;
@@ -83,71 +84,82 @@ TEST_F(OmniboxEditModelTest, AdjustTextForCopy) {
     const char* expected_output;
     const bool write_url;
     const char* expected_url;
+
+    bool steady_state_elisions_on = false;
+    const char* url_for_display = "";
   } input[] = {
-      // Test that http:// and https:// are inserted if all text is selected.
-      {"a.de/b", 0, true, "", false, "a.de/b", "http://a.de/b", true,
+      // Test that http:// is inserted if all text is selected.
+      {"a.de/b", 0, "", false, "a.de/b", "http://a.de/b", true,
        "http://a.de/b"},
-      {"https://a.de/b", 0, true, "", false, "a.de/b", "https://a.de/b", true,
-       "https://a.de/b"},
 
       // Test that http:// and https:// are inserted if the host is selected.
-      {"a.de/b", 0, false, "", false, "a.de/", "http://a.de/", true,
-       "http://a.de/"},
-      {"https://a.de/b", 0, false, "", false, "https://a.de/", "https://a.de/",
-       true, "https://a.de/"},
+      {"a.de/b", 0, "", false, "a.de/", "http://a.de/", true, "http://a.de/"},
+      {"https://a.de/b", 0, "", false, "https://a.de/", "https://a.de/", true,
+       "https://a.de/"},
 
       // Tests that http:// is inserted if the path is modified.
-      {"a.de/b", 0, false, "", false, "a.de/c", "http://a.de/c", true,
+      {"a.de/b", 0, "", false, "a.de/c", "http://a.de/c", true,
        "http://a.de/c"},
 
       // Tests that http:// isn't inserted if the host is modified.
-      {"a.de/b", 0, false, "", false, "a.com/b", "a.com/b", false, ""},
+      {"a.de/b", 0, "", false, "a.com/b", "a.com/b", false, ""},
 
       // Tests that http:// isn't inserted if the start of the selection is 1.
-      {"a.de/b", 1, false, "", false, "a.de/b", "a.de/b", false, ""},
+      {"a.de/b", 1, "", false, "a.de/b", "a.de/b", false, ""},
 
       // Tests that http:// isn't inserted if a portion of the host is selected.
-      {"a.de/", 0, false, "", false, "a.d", "a.d", false, ""},
+      {"a.de/", 0, "", false, "a.d", "a.d", false, ""},
 
       // Tests that http:// isn't inserted if the user adds to the host.
-      {"a.de/", 0, false, "", false, "a.de.com/", "a.de.com/", false, ""},
+      {"a.de/", 0, "", false, "a.de.com/", "a.de.com/", false, ""},
 
       // Tests that we don't get double schemes if the user manually inserts
       // a scheme.
-      {"a.de/", 0, false, "", false, "http://a.de/", "http://a.de/", true,
+      {"a.de/", 0, "", false, "http://a.de/", "http://a.de/", true,
        "http://a.de/"},
-      {"a.de/", 0, false, "", false, "HTtp://a.de/", "HTtp://a.de/", true,
+      {"a.de/", 0, "", false, "HTtp://a.de/", "HTtp://a.de/", true,
        "http://a.de/"},
-      {"https://a.de/", 0, false, "", false, "https://a.de/", "https://a.de/",
-       true, "https://a.de/"},
+      {"https://a.de/", 0, "", false, "https://a.de/", "https://a.de/", true,
+       "https://a.de/"},
 
       // Test that we don't get double schemes or revert the change if the user
       // manually changes the scheme from 'http://' to 'https://' or vice versa.
-      {"a.de/", 0, false, "", false, "https://a.de/", "https://a.de/", true,
+      {"a.de/", 0, "", false, "https://a.de/", "https://a.de/", true,
        "https://a.de/"},
-      {"https://a.de/", 0, false, "", false, "http://a.de/", "http://a.de/",
-       true, "http://a.de/"},
+      {"https://a.de/", 0, "", false, "http://a.de/", "http://a.de/", true,
+       "http://a.de/"},
 
       // Makes sure intranet urls get 'http://' prefixed to them.
-      {"b/foo", 0, true, "", false, "b/foo", "http://b/foo", true,
-       "http://b/foo"},
+      {"b/foo", 0, "", false, "b/foo", "http://b/foo", true, "http://b/foo"},
 
       // Verifies a search term 'foo' doesn't end up with http.
-      {"www.google.com/search?", 0, false, "", false, "foo", "foo", false, ""},
+      {"www.google.com/search?", 0, "", false, "foo", "foo", false, ""},
 
       // Verifies that http:// and https:// are inserted for a match in a popup.
-      {"a.com", 0, true, "http://b.com/foo", true, "b.com/foo",
-       "http://b.com/foo", true, "http://b.com/foo"},
-      {"a.com", 0, true, "https://b.com/foo", true, "b.com/foo",
-       "https://b.com/foo", true, "https://b.com/foo"},
+      {"a.com", 0, "http://b.com/foo", true, "b.com/foo", "http://b.com/foo",
+       true, "http://b.com/foo"},
+      {"a.com", 0, "https://b.com/foo", true, "b.com/foo", "https://b.com/foo",
+       true, "https://b.com/foo"},
 
       // Verifies that no scheme is inserted if there is no valid match.
-      {"a.com", 0, true, "", true, "b.com/foo", "b.com/foo", false, ""},
+      {"a.com", 0, "", true, "b.com/foo", "b.com/foo", false, ""},
+
+      // Steady State Elisions test for re-adding an elided 'https://'.
+      {"https://a.de/b", 0, "", false, "a.de/b", "https://a.de/b", true,
+       "https://a.de/b", true, "a.de/b"},
   };
 
   for (size_t i = 0; i < arraysize(input); ++i) {
+    base::test::ScopedFeatureList feature_list;
+    if (input[i].steady_state_elisions_on) {
+      feature_list.InitAndEnableFeature(
+          omnibox::kUIExperimentHideSteadyStateUrlSchemeAndSubdomains);
+    }
+
     toolbar_model()->set_formatted_full_url(
         base::ASCIIToUTF16(input[i].url_for_editing));
+    toolbar_model()->set_url_for_display(
+        base::ASCIIToUTF16(input[i].url_for_display));
     model()->ResetDisplayUrls();
 
     model()->SetInputInProgress(input[i].is_match_selected_in_popup);
@@ -160,8 +172,7 @@ TEST_F(OmniboxEditModelTest, AdjustTextForCopy) {
     base::string16 result = base::ASCIIToUTF16(input[i].input);
     GURL url;
     bool write_url;
-    model()->AdjustTextForCopy(input[i].sel_start, input[i].is_all_selected,
-                               &result, &url, &write_url);
+    model()->AdjustTextForCopy(input[i].sel_start, &result, &url, &write_url);
     EXPECT_EQ(base::ASCIIToUTF16(input[i].expected_output), result)
         << "@: " << i;
     EXPECT_EQ(input[i].write_url, write_url) << " @" << i;
